update manuscript citation

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ Bank Swallow population dynamics & river flow
 Analysis of Bank Swallow population dynamics on the Sacramento River, based on annual burrow count surveys (1999-2023). Evaluation of effects of river flow (including lagged effects), drought indices, and density dependence on annual population growth rates.
 
 ## Manuscript
-Golet GH, Dybala KE, Silveira JG, Henderson A, Isola JE, Wright DH, Melcer Jr R, Tsao D (In press) The importance of high streamflow and meander migration for the Bank Swallow, a sentinel species of alluvial river systems. *Ecological Indicators*
+Golet GH, Dybala KE, Silveira JG, Henderson A, Isola JE, Wright DH, Melcer Jr R, Tsao D (2025) The importance of high streamflow and meander migration for the Bank Swallow, a sentinel species of alluvial river systems. *Ecological Indicators* 174:113460. DOI: [10.1016/j.ecolind.2025.113460](https://doi.org/10.1016/j.ecolind.2025.113460)
 
 ## Contacts
 Kristen Dybala (Point Blue), Greg Golet (The Nature Conservancy)
